--- a/src/components/sound-waves-effect/style.module.css
+++ b/src/components/sound-waves-effect/style.module.css
@@ -10,7 +10,7 @@
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
   animation-direction: alternate;
-  background: #08f;
+  background: #800080;
   margin: 0 2px;
   height: 100%;
   width: 4px;
